--- a/src/components/tickets/index.css
+++ b/src/components/tickets/index.css
@@ -1,8 +1,8 @@
 .tickets {
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 
 .tickets-finalizar {
@@ -16,34 +16,27 @@
 }
 
 .tickets-country {
-  background-color: white;
-  padding: 16px;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  font-weight: bold;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  border-right: 1px dashed #4f54a7;
+  background-color: white;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+  display: flex;
+  font-size: 1.2rem;
+  font-weight: bold;
+  justify-content: center;
+  padding: 16px;
+  text-transform: uppercase;
 }
 
 .tickets-passengers {
   background-color: rgba(151, 149, 240, 0.5);
-  padding: 16px;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
-  font-weight: bold;
+  border-bottom-right-radius: 8px;
+  border-top-right-radius: 8px;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  font-weight: bold;
+  justify-content: space-between;
+  padding: 16px;
   position: relative;
-  border-left: 1px dashed #4f54a7;
 }
 
 .tickets-passengers p {
@@ -51,10 +44,10 @@
 }
 
 .tickets-passengers span {
-  position: absolute;
-  top: -10px;
-  right: 10px;
-  font-size: 60px;
   color: #4f54a7;
+  font-size: 60px;
+  position: absolute;
+  right: 10px;
+  top: -10px;
   transform: rotate(-45deg);
 }
